--- a/app/views/customers/customers.html
+++ b/app/views/customers/customers.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <h3 class="panel-title">Khách hàng
+                <h3 class="panel-title">{{ 'CUSTOMERS' | translate }}
                     <div class="panel-control pull-right"> <a class="panelButton"><i class="fa fa-refresh"></i></a> <a class="panelButton"><i class="fa fa-minus"></i></a> <a class="panelButton"><i class="fa fa-remove"></i></a> </div>
                 </h3>
             </div>
@@ -12,14 +12,17 @@
                     <button tooltips tooltip-side="bottom" tooltip-template="{{ 'IMPORT' | translate }}" type="button" class="btn btn-info"><i class="fa fa-upload"></i></button> 
                     <button tooltips tooltip-side="bottom" tooltip-template="{{ 'EXPORT' | translate }}" type="button" class="btn btn-warning"><i class="fa fa-download"></i></button> 
                     <button tooltips tooltip-side="bottom" tooltip-template="{{ 'DELETE_SELECT' | translate }}" type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
+                    
+                    <label class="label label-success">{{ 'SELECTED' | translate }} ( {{cus.listCheckCus.length || 0}} )</label>
                 </p>
-                <hr/>{{checkCus123}}
+                <hr/>
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>
                                 <label class="checkbox1" for="ipCusListCheckAll"> 
-                                    <input id="ipCusListCheckAll" ng-click="checkAllCus($event)" type="checkbox"> <span></span> 
+                                    <input id="ipCusListCheckAll" ng-value="true" ng-model="cus.checkAllList" ng-click="cus.checkAllCus($event)" type="checkbox" /> 
+                                    <span></span> 
                                 </label>
                             </th>
                             <th class="col-md-2">{{ 'CUSTOMER_CODE' | translate }}</th>
@@ -42,43 +45,26 @@
                         </tr>
                     </tfoot>
                     <tbody>
-
-                        <tr data-ng-repeat="customer in dataCustomers" ng-mouseenter="viewIcon = true" ng-mouseleave="viewIcon = false">
+                        <tr ng-repeat="customer in cus.dataCustomers" ng-mouseenter="viewIcon = true" ng-mouseleave="viewIcon = false" ng-init="viewIcon = false">
                             <td>
                                 <label class="checkbox1" for="ipCusListCheck{{customer.id}}"> 
-                                    <input id="ipCusListCheck{{customer.id}}" checklist-model="checkCus123" checklist-value="customer.id" name="ipCusListCheck{{customer.id}}" type="checkbox" /> <span></span> 
+                                    <input ng-checked="cus.checkAllList" ng-click="cus.checkCus($event, customer.id)" id="ipCusListCheck{{customer.id}}" type="checkbox" /> 
+                                    <span></span>
                                 </label>
                             </td>
                             <td>{{customer.customerCode}}</td>
                             <td>{{customer.lastName + ' ' + customer.firstName}}</td>
-                            <td>{{customer.mobile}} <button tooltips tooltip-template="{{ 'CALL_THIS_NUMBER' | translate }}" type="button" class="btn btn-xs btn-info btn-round" ng-if="customer.mobile && viewIcon"><i class="fa fa-phone" aria-hidden="true"></i></button></td>
-                            <td>{{customer.phone}} <button tooltips tooltip-template="{{ 'CALL_THIS_NUMBER' | translate }}" type="button" class="btn btn-xs btn-info btn-round" ng-if="customer.phone && viewIcon"><i class="fa fa-phone" aria-hidden="true"></i></button></td>
+                            <td>{{customer.mobile}} <button tooltips tooltip-template="{{ 'CALL_THIS_NUMBER' | translate }}" type="button" class="btn btn-xs btn-info btn-round" ng-show="customer.mobile && viewIcon"><i class="fa fa-phone" aria-hidden="true"></i></button></td>
+                            <td>{{customer.phone}} <button tooltips tooltip-template="{{ 'CALL_THIS_NUMBER' | translate }}" type="button" class="btn btn-xs btn-info btn-round" ng-show="customer.phone && viewIcon"><i class="fa fa-phone" aria-hidden="true"></i></button></td>
                             <td>{{customer.email}}</td>
                             <td>
-                                <a ng-show="viewIcon" tooltips tooltip-template="{{ 'EDIT' | translate }}" class="btn btn-floating btn-success btn-xs" ng-click="addTab(customer.lastName + ' ' + customer.firstName, 'customerDetail', {customerId: customer.id})" href="javascript:void(0)"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                                <button ng-if="viewIcon" tooltips tooltip-template="{{ 'DELETE' | translate }}" type="button" ng-click="deleteCustomer(customer.id)" class="btn btn-floating btn-danger btn-xs"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+                                <a class="btn btn-floating btn-success btn-xs" tooltips tooltip-template="{{ 'EDIT' | translate }}" href="javascript:void(0)"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                                <button tooltips tooltip-template="{{ 'DELETE' | translate }}" type="button" class="btn btn-floating btn-danger btn-xs"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-
-
     </div>
-    <!--    <div class="col-md-12">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Default Form
-                        <div class="panel-control pull-right"> <a class="panelButton"><i class="fa fa-refresh"></i></a> <a class="panelButton"><i class="fa fa-minus"></i></a> <a class="panelButton"><i class="fa fa-remove"></i></a> </div>
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <form class="ng-pristine ng-valid">
-                        <div class="form-group"> <label for="exampleInputEmail1">Email address</label> <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email"> </div>
-                        <div class="form-group"> <label for="exampleInputPassword1">Password</label> <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"> </div>
-                        <div class="checkbox"> <label> <input type="checkbox"> Remember me </label> </div> <button type="submit" class="btn btn-default">Submit</button> </form>
-                </div>
-            </div>
-        </div>-->
 </div>
