--- a/app/views/dashboard/dashboard.html
+++ b/app/views/dashboard/dashboard.html
@@ -263,7 +263,7 @@
                                 <div class="input-group"> 
                                     <input type="text" class="form-control" ng-model="formTodoText"> 
                                     <span class="input-group-btn"> 
-                                        <button class="btn btn-default" ng-click="addTodo()" type="submit">Add</button> 
+                                        <button class="btn btn-default" type="submit">Add</button> 
                                     </span> 
                                 </div>
                             </div>
