--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar topnav-navbar navbar-fixed-top" role="navigation">
     <div class="navbar-header text-center"> 
-        <button type="button" class="navbar-toggle" ng-click="showMenu();"> 
+        <button type="button" class="navbar-toggle"> 
             <span class="sr-only">Toggle navigation</span> 
             <span class="icon-bar"></span> 
             <span class="icon-bar"></span> 
@@ -9,75 +9,43 @@
         <a class="navbar-brand" href="#!/index?module=dashboard">Contact Popup</a> 
     </div>
     <div class="collapse navbar-collapse">
-        <form class="navbar-form navbar-left ng-pristine ng-valid" role="search"> <span class="glyphicon glyphicon-search"></span>
+        <form class="navbar-form navbar-left" role="search"> 
+            <span class="glyphicon glyphicon-search"></span>
             <div class="form-group"> <input type="text" class="form-control"> </div>
         </form>
         <ul class="nav navbar-nav">
             <li class="dropdown"> 
                 <a class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-envelope"></span>
-                    <span class="badge badge-green">5</span>
+                    <span class="badge badge-green">0</span>
                 </a>
                 <ul class="dropdown-menu animated fadeIn">
-                    <li class="messages-top text-center ng-binding"> You have 4 unread messages. </li>
-                    <li class="dropdown-messages">
-                        <a href="#">
-                            <div class="message-sender ng-binding"> Lucy Chandler </div>
-                            <div class="message-header ng-binding"> Sent you a friend request. </div>
+                    <li class="messages-top text-center"> You have 0 unread messages. </li>
+<!--                    <li class="dropdown-messages">
+                        <a href="javascript:void(0)">
+                            <div class="message-sender"> Lucy Chandler </div>
+                            <div class="message-header"> Sent you a friend request. </div>
                         </a>
-                    </li>
-                    <li class="dropdown-messages">
-                        <a href="#">
-                            <div class="message-sender ng-binding"> Diptesh Mishra </div>
-                            <div class="message-header ng-binding"> Asked you to join StrapUI. </div>
-                        </a>
-                    </li>
-                    <li class="dropdown-messages">
-                        <a href="#">
-                            <div class="message-sender ng-binding"> Wang Xiao </div>
-                            <div class="message-header ng-binding"> Congratulations! your account is activated. </div>
-                        </a>
-                    </li>
-                    <li class="dropdown-messages">
-                        <a href="#">
-                            <div class="message-sender ng-binding"> Jade Mullick </div>
-                            <div class="message-header ng-binding"> Let's have a meeting at 5:00pm. </div>
-                        </a>
-                    </li>
+                    </li>-->
                 </ul>
             </li>
             <li class="dropdown"> 
                 <a class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-bell"></span>
-                    <span class="badge badge-red">13</span>
+                    <span class="badge badge-red">1</span>
                 </a>
                 <ul class="dropdown-menu animated fadeIn">
-                    <li class="notification-header text-center ng-binding"> You have 3 new notifications. </li>
+                    <li class="notification-header text-center"> You have 1 new notifications. </li>
                     <li class="dropdown-notifications">
-                        <a href="#">
-                            <div class="notification ng-binding"> <i class="fa fa-thumbs-up"></i> Runuma Das liked your photo. </div>
-                        </a>
-                    </li>
-                    <li class="dropdown-notifications">
-                        <a href="#">
-                            <div class="notification ng-binding"> <i class="fa fa-thumbs-up"></i>Harshita Borah liked your status. </div>
-                        </a>
-                    </li>
-                    <li class="dropdown-notifications">
-                        <a href="#">
-                            <div class="notification ng-binding"> <i class="fa fa-user-plus"></i>Archana wants to be friends. </div>
-                        </a>
-                    </li>
-                    <li class="dropdown-notifications">
-                        <a href="#">
-                            <div class="notification ng-binding"> <i class="fa fa-user-times"></i>Animesh Saha unfriended you. </div>
+                        <a href="javascript:void(0)">
+                            <div class="notification"> <i class="fa fa-thumbs-up"></i> Runuma Das liked your photo. </div>
                         </a>
                     </li>
                 </ul>
             </li>
             <li ng-repeat="tab in appTabs" class="mitabs" ng-class="tab.active && appPModule=='customer'?'active':''">
                 <a href="javascript:void(0)" ng-click="showTabCustomer(tab.params.action, tab.index, tab.type)"> 
-                    <i class="fa fa-user-circle"></i> {{tab.title}}
+                    <i class="fa fa-user"></i> {{tab.title}}
                 </a>
             </li>
         </ul>
@@ -115,7 +83,7 @@
 
 <!--<div>This is header</div>
 <ul>
-    <li><a href="#">Hello</a></li>
+    <li><a href="javascript:void(0)">Hello</a></li>
     <li><a href="#!/index?module=dashboard">Dashboard</a></li>
     <li><a href="#!/index?module=customers">Customers</a></li>   
     <li><a href="#!/index?module=customers&action=add">Add Customer</a></li>   
