--- a/public/css/miapp.css
+++ b/public/css/miapp.css
@@ -1,4 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600);html {
+@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600);
+html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
@@ -2294,15 +2295,8 @@ output,.form-control {
 }
 
 .form-control {
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    background-color: #fff;
-    background-image: none;
     border: 1px solid #ccc;
     border-radius: 0;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
 }
 
 .form-control:focus {
@@ -2645,4 +2639,11 @@ input[type="search"] {
 .todo-container .bg-danger {
     color: #fff;
     background-color: #de6764;
+}
+.margin-bottom-0{
+    margin-bottom: 0px !important;
+}
+
+.form-input-sm .form-control{
+    font-size: 12px;
 }
